# ssh-manager

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  TESTING.md  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.cfg  ssh_gui.py  ssh_manager.py  tox.ini  validate_test_setup.py
.github/workflows/: ci.yml  release.yml
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_integration.py  test_ssh_manager.py  test_ssh_profile.py
tests/data/: corrupted_profiles.json  sample_profiles.json
