[flake8]
max-line-length = 88
extend-ignore = E203, E501, W503
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    .venv,
    venv,
    build,
    dist,
    *.egg-info,
    .tox,
    .coverage,
    htmlcov,
    migrations

per-file-ignores =
    tests/*:E501,F401,F811
    __init__.py:F401

[bdist_wheel]
universal = 0

[metadata]
license_files = LICENSE*

[egg_info]
tag_build =
tag_date = 0
